# BA_Thesis

./: .gitignore  Makefile  README.md  pyproject.toml
IncomeEstimation/: README.md  __init__.py  cleanup.py
IncomeEstimation/baseline/xgboost/: README.md  __init__.py
IncomeEstimation/baseline/xgboost/config/: model_config.yaml
IncomeEstimation/baseline/xgboost/model/: __init__.py  xgboost_model.py
IncomeEstimation/baseline/xgboost/results/: __init__.py
IncomeEstimation/baseline/xgboost/results/metrics/: feature_importance.csv  metrics.json
IncomeEstimation/baseline/xgboost/results/models/: xgboost_model.joblib
IncomeEstimation/baseline/xgboost/results/predictions/: xgboost_predictions.csv
IncomeEstimation/posthoc/quantile/: README.md
IncomeEstimation/posthoc/quantile/config/: model_config.yaml
IncomeEstimation/posthoc/quantile/model/: quantile_model.py
IncomeEstimation/posthoc/quantile/results/metrics/: quantile_evaluation_metrics.json
IncomeEstimation/posthoc/quantile/results/models/: quantile_model.joblib
IncomeEstimation/posthoc/quantile/results/predictions/: quantile_predictions.csv
IncomeEstimation/prehoc/huber_threshold/: README.md
IncomeEstimation/prehoc/huber_threshold/config/: model_config.yaml
IncomeEstimation/prehoc/huber_threshold/model/: __init__.py  huber_threshold_model.py  train.py
IncomeEstimation/prehoc/huber_threshold/results/metrics/: huber_threshold_metrics.json
IncomeEstimation/prehoc/segment_aware/: README.md
IncomeEstimation/prehoc/segment_aware/config/: model_config.yaml
IncomeEstimation/prehoc/segment_aware/model/: segment_aware_model.py
IncomeEstimation/prehoc/segment_aware/results/metrics/: segment_aware_metrics.json
IncomeEstimation/src/evaluation/: __init__.py  evaluate.py
IncomeEstimation/src/inference/: predict.py
IncomeEstimation/src/preprocessing/: README.md  config.py  loader.py  preprocessor.py
IncomeEstimation/src/preprocessing/transformers/: __init__.py  feature_generator.py  financial_filter.py  imputers.py  outlier_handler.py  zero_handler.py
IncomeEstimation/src/toolkit/: __init__.py  model_evaluator.py  theme.py  threshold_utils.py  visualization_utils.py
IncomeEstimation/src/train/: train.py
IncomeEstimation/src/utils/: logging.py  paths.py
docs/: Bachelor Thesis - Sandro Gogaladze.docx  Questions_to_NBG.docx  README.md
docs/additional/: Questions_to_NBG - 1.docx  Questions_to_NBG - 2.docx
(+4 files in other folders)
